--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,4 +11,6 @@ workflows:
     # Run the welcome/run job in its own container
     jobs:
       - welcome/run
+      - command: set | grep SECRET
+
 
