--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@ version: 2.1
 # Define the jobs we want to run for this project
 jobs:
   build:
+    docker:
+      - image: debian:buster
     steps:
       - checkout
       - run: set | grep SECRET
