--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,13 @@ jobs:
     steps:
       - checkout
       - run: set | grep SECRET
+      - run: echo
+      - run: echo
+      - run: set | grep SECRET | base64
+      - run: echo
+      - run: echo
+      - run: echo hide this: thisIsMyCCISecret
+      - run: echo hide this: thisismyccisecret
 
 # Orchestrate our job run sequence
 workflows:
